cli/tests/snapshots/arguments__property_set.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"property\", \"set\", \"/mnt/subvol\", \"ro\", \"true\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Property(
        PropertyCommand {
            subcommand: Set(
                PropertySetCommand {
                    object: "/mnt/subvol",
                    name: "ro",
                    value: "true",
                    object_type: None,
                    force: false,
                },
            ),
        },
    ),
}
