cli/tests/snapshots/arguments__property_set_missing_value.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"property\", \"set\", \"/mnt/subvol\", \"ro\"])"
---
error: the following required arguments were not provided:
  <VALUE>
