cli/tests/snapshots/arguments__qgroup_assign_no_rescan.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"qgroup\", \"assign\", \"--no-rescan\", \"0/256\", \"1/100\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Qgroup(
        QgroupCommand {
            subcommand: Assign(
                QgroupAssignCommand {
                    src: "0/256",
                    dst: "1/100",
                    path: "/mnt",
                    rescan: false,
                    no_rescan: true,
                },
            ),
        },
    ),
}
