cli/tests/snapshots/arguments__qgroup_clear_stale.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"qgroup\", \"clear-stale\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Qgroup(
        QgroupCommand {
            subcommand: ClearStale(
                QgroupClearStaleCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
