cli/tests/snapshots/arguments__qgroup_create.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"qgroup\", \"create\", \"1/100\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Qgroup(
        QgroupCommand {
            subcommand: Create(
                QgroupCreateCommand {
                    qgroupid: "1/100",
                    path: "/mnt",
                },
            ),
        },
    ),
}
