cli/tests/snapshots/arguments__qgroup_create_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"qgroup\", \"create\", \"1/100\"])"
---
error: the following required arguments were not provided:
  <PATH>
