cli/tests/snapshots/arguments__qgroup_destroy.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"qgroup\", \"destroy\", \"1/100\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Qgroup(
        QgroupCommand {
            subcommand: Destroy(
                QgroupDestroyCommand {
                    qgroupid: "1/100",
                    path: "/mnt",
                },
            ),
        },
    ),
}
